--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "concurrently \"npm run dev --prefix frontend\" \"npm start --prefix backend\"",
-     "build": "npm run build --prefix frontend"
+     "build": "npm run build --prefix frontend",
+     "start": "npm start --prefix backend"
   },
   "devDependencies": {
     "concurrently": "^8.0.0"
