--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "Wikipedia-Search-Engine",
   "version": "1.0.0",
   "private": true,
+  
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm start --prefix backend\"",
-     "build": "npm run build --prefix frontend",
-     "start": "npm start --prefix backend"
-  },
+  "postinstall": "npm install --prefix frontend",
+  "build": "npm run build --prefix frontend",
+  "start": "npm start --prefix backend",
+  "dev": "concurrently \"npm run dev --prefix frontend\" \"npm start --prefix backend\""
+  }
   "devDependencies": {
     "concurrently": "^8.0.0"
   }
