--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-  "dev": "concurrently \"npm run dev --prefix frontend\" \"npm start --prefix backend\""
-  }
+    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm start --prefix backend\"",
+    "build": "npm install --prefix frontend && npm run build --prefix frontend"
+  },
   "devDependencies": {
     "concurrently": "^8.0.0"
   }
