--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix frontend\" \"npm start --prefix backend\"",
-    "build": "npm install --prefix frontend && npm run build --prefix frontend"
+  "dev": "concurrently \"npm run dev --prefix frontend\" \"npm start --prefix backend\"",
+  "build": "npm install --prefix frontend && npm install --prefix backend && npm run build --prefix frontend"
   },
   "devDependencies": {
     "concurrently": "^8.0.0"
